# url-text-fetch-mcp

./: LICENSE  README.md  pyproject.toml
url_text_fetcher/: url_text_fetcher_mcp.py
